Fix spelling error

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </li>
 
                 <li>
-                    <h3>Don't send a developer an InDesign file with the design. Do a PDF instead. Or, even better, use <a href="https://www.sketchapp.com/" target="_blank" rel="noopener">Sketch</a> if you're on a Mac.</h3>
+                    <h3>Don't send a developer an InDesign file with the design. Do a PSD instead. Or, even better, use <a href="https://www.sketchapp.com/" target="_blank" rel="noopener">Sketch</a> if you're on a Mac.</h3>
 
                     <p>There isn't much I can do with an InDesign file as far as extracting assets, getting correct typography sizes, etc. Print does not equal web!</p>
                 </li>
